--- a/app.json
+++ b/app.json
@@ -1,6 +1,14 @@
 {
   "expo": {
     "name": "geoLocation1",
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ]
+    ],
     "slug": "geoLocation1",
     "version": "1.0.0",
     "orientation": "portrait",
